# torbrowser-launcher-mac

./: .cz.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .swift-format  .swiftformat  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile.in  LICENSE.txt  README.md  package.json  vcpkg.json  xib_helpers.cmake
.claude/agents/: copy-editor.md  regen.md  release.md
.claude/skills/ci/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: general.instructions.md
.github/workflows/: cmake.yml  codeql.yml  main.yml  pages.yml  qa.yml  release.yml  tests.yml
TorBrowserLauncher/: AppDelegate.swift  CMakeLists.txt  Info.plist.in  LauncherWindow.swift  Utils.swift
TorBrowserLauncher/Base.lproj/: LauncherWindow.xib  MainMenu.xib
TorBrowserLauncher/en.lproj/: LauncherWindow.strings  MainMenu.strings
TorBrowserLauncher/zh-Hans.lproj/: InfoPlist.strings  LauncherWindow.strings  Localizable.strings  MainMenu.strings
TorBrowserLauncherLib/: CMakeLists.txt  Constants.swift  DMGManager.swift  Downloader.swift  Installer.swift  Settings.swift  TBLFileManager.swift  URLSessionFactory.swift  Utils.swift
TorBrowserLauncherLib/zh-Hans.lproj/: Lib.strings
TorBrowserLauncherTests/: CMakeLists.txt  DMGManagerTest.swift  DownloaderTest.swift  InstallerTest.swift  SettingsTest.swift  TorBrowserLauncherTests.swift  UtilsBackgroundURLSessionTests.swift  UtilsFindMatchInLinesTests.swift  UtilsHDIAttachTests.swift  UtilsHDIDetachTests.swift  UtilsRemoveItemIfExistsTests.swift  UtilsRemoveQuarantineExtendedAttributesTests.swift  UtilsTest.swift  UtilsURLSessionWithProxyTests.swift
cmake/: add-language.cmake
torbrowser-launcher/: AppDelegate.swift  Info.plist  LauncherWindow.swift  LauncherWindow.xib  Localizable.strings  Utils.swift
torbrowser-launcher.xcodeproj/: project.pbxproj
torbrowser-launcher.xcodeproj/xcshareddata/xcschemes/: torbrowser-launcher.xcscheme
torbrowser-launcher.xcodeproj/xcuserdata/tatsh.xcuserdatad/xcschemes/: xcschememanagement.plist
torbrowser-launcher/Assets.xcassets/AppIcon.appiconset/: Contents.json
torbrowser-launcher/Base.lproj/: LauncherWindow.xib  MainMenu.xib
torbrowser-launcher/zh-Hans.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.strings
torbrowser-launcherTests/: TorBrowserLauncherTests.swift  torbrowser_launcherTests.swift
torbrowser-launcherUITests/: Info.plist  TorBrowserLauncherUITests.swift  torbrowser_launcherUITests.swift
