find_package(XCTest REQUIRED)
add_library(foo STATIC ../${CMAKE_PROJECT_NAME}/Utils.swift
                       ../${CMAKE_PROJECT_NAME}/LauncherWindow.swift)
set_target_properties(
  foo
  PROPERTIES XCODE_ATTRIBUTE_ENABLE_TESTABILITY YES
             XCODE_ATTRIBUTE_GCC_GENERATE_TEST_COVERAGE_FILES YES
             XCODE_ATTRIBUTE_GCC_INSTRUMENT_PROGRAM_FLOW_ARCS YES
             XCODE_ATTRIBUTE_GCC_GENERATE_DEBUGGING_SYMBOLS YES)
xctest_add_bundle(${CMAKE_PROJECT_NAME}Tests foo ${CMAKE_PROJECT_NAME}Tests.swift)
set_target_properties(
  ${CMAKE_PROJECT_NAME}Tests PROPERTIES XCODE_ATTRIBUTE_ENABLE_TESTABILITY YES
                                        XCODE_ATTRIBUTE_GCC_GENERATE_TEST_COVERAGE_FILES YES)
xctest_add_test(app.${CMAKE_PROJECT_NAME}Tests ${CMAKE_PROJECT_NAME}Tests)
